2014-03-09  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/cons_smacof_pip.m: (0.3.2)

	- Now instead of giving an error when SCIP cannot find a solution,
	we deal with this gracefully. For instance, the constraints we
	have given may define an unfeasible problem. In that case, instead
	of exiting with error(), what we want to do is that the algorithm
	exits normally, but saying that the stopCondition is e.g. 'SCIP:
	unfeasible'. This could be used, for example to then relax the
	constraints and re-run the algorithm.

2014-03-07  Ramon Casero  <rcasero@gmail.com>

	* matlab/test/test_cons_smacof_pip.m: (0.2.4)

	- For the sphere, update calls to cons_smacof_pip() to new
	syntax. We now pass isFree as a vector, and we pass the whole
	distance matrix.

	- For the sphere with the vertices pertubed to produce fold-over,
	make not specific to a sphere sampling of 10 vertices.

	- Remove last test for the sphere, that was redundant.

	* matlab/PointsToolbox/cons_smacof_pip.m: (0.3.1)

	- Fix bug. Wrong index writting the upper triangular terms of the
	objective function in the 3D case.

2014-03-06  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/cons_smacof_pip.m: (0.3.0)
	* matlab/ManifoldToolbox/tri_qcqp_smacof_nofold_2d_pip.m: (0.1.4)
	* matlab/test/test_cons_smacof_pip.m: (0.2.3)

	- Fix bug for 2D with fixed vertices. Add input argument isFree to
	cons_smacof_pip(). We were doing it wrong when we had fixed
	vertices. We were expecting the distance matrix to be d(isFree,
	isFree). However, we need distance values from the free to the
	fixed vertices too. Also, the objective function needs to have
	terms that will be xi * c, where xi is a free vertex, and c a
	constant that includes xj, a coordinate of a fixed vertex. Also,
	at each SMACOF step, we have to update only the coordinates of the
	free vertices. Fixed vertices don't change.

2014-02-28  Ramon Casero  <rcasero@gmail.com>
